--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ kiwisolver==1.3.1
 MarkupSafe==1.1.1
 matplotlib==3.3.3
 numpy==1.19.4
+pandas==1.2.0
 Pillow==8.0.1
 plotly==4.14.1
 pyparsing==2.4.7
@@ -17,6 +18,7 @@ python-dateutil==2.8.1
 pytz==2020.5
 retrying==1.3.3
 scikit-learn==0.24.0
+scipy==1.6.0
 six==1.15.0
 sklearn==0.0
 threadpoolctl==2.1.0
