--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ click==7.1.2
 cycler==0.10.0
 Flask==1.1.2
 gunicorn==20.0.4
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 joblib==1.0.0
@@ -15,6 +16,7 @@ plotly==4.14.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.5
+requests==2.25.1
 retrying==1.3.3
 scikit-learn==0.24.0
 scipy==1.6.0
